--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
 
     </style>
-    <style name="QuestionTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
+    <style name="QuestionTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
     </style>
     <style name="LinearLayoutTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="android:layout_marginTop">10dp</item>
