--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.wanghao.imet.MainActivity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
@@ -94,8 +98,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:gravity="bottom"
-            android:background="#f7f4f2">
+            android:gravity="bottom">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -103,11 +106,11 @@
                 android:text="@string/create_an_account"
                 android:id="@+id/createAccountText"
                 android:layout_gravity="bottom|center_horizontal"
-                android:textColor="#4e4a4a"
-                android:textAlignment="viewEnd" />
+                android:textColor="#4e4a4a" />
         </LinearLayout>
 
     </LinearLayout>
+    </ScrollView>
 
     <TextView
         android:layout_width="wrap_content"
