--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -177,7 +177,7 @@
                 android:text="Submit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/button6" />
+                android:id="@+id/signUpSubmitButton" />
         </LinearLayout>
     </ScrollView>
 
